# selium-modules

remote-client/: Cargo.toml  README.md
remote-client/cli/src/: main.rs
remote-client/protocol/: Cargo.toml
remote-client/protocol/schemas/: remote_client.fbs
remote-client/protocol/src/: lib.rs
remote-client/protocol/src/fbs/remote_client/protocol/: capability_generated.rs
remote-client/server/src/: lib.rs
