[package]
name = "selium-remote-client-protocol"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flatbuffers = { workspace = true }
selium-abi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
flatbuffers-build = { workspace = true }
flatc = { workspace = true }
